--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "react-design-patterns-astro",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -12,10 +12,22 @@
   "dependencies": {
     "@astrojs/check": "^0.9.2",
     "@astrojs/preact": "^3.5.1",
+    "@astrojs/react": "^3.6.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.13.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.424.0",
     "preact": "^10.23.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.7",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
